# cardio

./: .env  heart_data.db  heart_disease.csv  patients.md  pdf_diagnosis_cos copy 2.py  pdf_diagnosis_cos copy.py  pyproject.toml
chroma_db/diad_man/81687936-12a4-4c82-8253-55859451f318/: index_metadata.pickle
chroma_db/heart_disease/7b993bc4-4bc9-41d9-9ec0-7a85e4492018/: index_metadata.pickle
chroma_db/heart_disease_lms/: chroma.sqlite3
chroma_db/heart_disease_openAI/: chroma.sqlite3
scripts/: csv_compresion.py  csv_loader.py  csv_openAI copy.py  csv_openAI.py  data2sqlite.py  db_loader.py  pdf_diagnosis.py  pdf_diagnosis_cos.py  pdf_diagnosis_cos_detodotipo.ipynb  pdf_diagnosis_cos_metadata.py  pdf_diagnosis_wcvs.py
